--- a/oghome.html
+++ b/oghome.html
@@ -6,7 +6,7 @@
 
 <p>Welcome to <i><b>The Real OG!</b></i> Here, we have some fun games for you to play! Enjoy!</p>
 
-<li> <a href="https://js13kgames.com/games/spacebar-clicker/index.html">Spacebar Clicker</a>
-<li> <a href="https://passioneffort.com/?link=aHR0cHM6Ly9wbGF5MjA0OC5jby8%3D">2048</a>
-<li> <a href="https://passioneffort.com/link=aHR0cHM6Ly9zY3JhdGNoLm1pdC5lZHUvcHJvamVjdHMvMzk1MjEwMzAvZnVsbHNjcmVlbi8%3D">Fruit Ninja</a>
+<li> <a href="https://js13kgames.com/games/spacebar-clicker/index.html" target="_blank">Spacebar Clicker</a>
+<li> <a href="https://passioneffort.com/?link=aHR0cHM6Ly9wbGF5MjA0OC5jby8%3D" target="_blank">2048</a>
+<li> <a href="https://passioneffort.com/link=aHR0cHM6Ly9zY3JhdGNoLm1pdC5lZHUvcHJvamVjdHMvMzk1MjEwMzAvZnVsbHNjcmVlbi8%3D" target="_blank">Fruit Ninja</a>
 <li> <a href="
